--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~13.1.0",
     "bootstrap": "^5.1.3",
     "rxjs": "~7.4.0",
+    "toastr": "^2.1.4",
     "tslib": "^2.4.0",
     "zone.js": "~0.11.4"
   },
